--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       </div>
       <button type="submit">Go!</button>
     </form>
+    <div></div>
+      <p></p>
+    </div>
   </div>
 </body>
 </html>
